@@ -1,0 +1,14 @@
+Processing test48...
+
+Warnings...
+
+test_input/test48.py:10: Object (i) has no attribute (has_no_method)
+test_input/test48.py:11: Object (l) has no attribute (has_no_method)
+test_input/test48.py:12: Object (d) has no attribute (has_no_method)
+test_input/test48.py:13: Object (s) has no attribute (has_no_method)
+test_input/test48.py:16: Object (i) has no attribute (has_no_attr)
+test_input/test48.py:17: Object (l) has no attribute (has_no_attr)
+test_input/test48.py:18: Object (d) has no attribute (has_no_attr)
+test_input/test48.py:19: Object (s) has no attribute (has_no_attr)
+test_input/test48.py:26: Object (jj) has no attribute (a)
+test_input/test48.py:27: Object (jj) has no attribute (b)
