@@ -1,0 +1,34 @@
+'d'
+
+class X:
+    'd'
+    def x(self): pass
+    def y(self): pass
+
+def x():
+    i, l, d, s, n = 0, [], {}, '', None
+    i.has_no_method()
+    l.has_no_method()
+    d.has_no_method()
+    s.has_no_method()
+    n.has_no_method()
+
+    i.has_no_attr
+    l.has_no_attr
+    d.has_no_attr
+    s.has_no_attr
+    n.has_no_attr
+
+    l.sort()
+    d.clear()
+
+    d[i] = jj = X()
+    jj.a()
+    jj.b()
+    jj.x()
+    jj.y()
+
+def y():
+    for j in []:
+        print j.a()
+
